--- a/package.json
+++ b/package.json
@@ -12,20 +12,19 @@
     "start": "set NODE_ENV=development && webpack-dev-server --open --config ./webpack/webpack.config.dev.js"
   },
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-d3-treemap": "1.0.5"
+    "react": "16.10.1",
+    "react-dom": "16.10.1",
+    "react-d3-treemap": "1.0.15"
   },
   "devDependencies": {
     "@types/node": "^7.0.4",
     "@types/react": "^15.0.6",
     "@types/react-dom": "^0.14.22",
-    "css-loader": "^0.26.1",
+    "css-loader": "^3.2.0",
     "path": "^0.12.7",
     "react-hot-loader": "^3.0.0-beta.3",
     "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
-    "stylelint": "^7.8.0",
     "ts-loader": "^2.0.1",
     "tslint": "^4.4.2",
     "tslint-react": "^2.3.0",
