--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "start": "set NODE_ENV=development && webpack-dev-server --open --config ./webpack/webpack.config.dev.js"
   },
   "dependencies": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-d3-treemap": "1.0.19"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-d3-treemap": "1.0.21"
   },
   "devDependencies": {
-    "@types/node": "^7.0.4",
-    "@types/react": "^15.0.6",
-    "@types/react-dom": "^0.14.22",
+    "@types/node": "14.14.35",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
     "css-loader": "^3.2.0",
     "path": "^0.12.7",
     "react-hot-loader": "^3.0.0-beta.3",
@@ -28,7 +28,7 @@
     "ts-loader": "^2.0.1",
     "tslint": "^4.4.2",
     "tslint-react": "^2.3.0",
-    "typescript": "^2.1.5",
+    "typescript": "4.2.3",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
